[package]
name = "vsrs"
version = "0.1.0"
authors = ["Gustaf Lindstedt <gustaflindstedt@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
korg-syro = { git = "https://github.com/glindstedt/korg-syro-rs" }
log = "0.4"
ron = "0.6"
serde = "1.0"
simple_logger = "1.11"
wav = "0.4.1"
