[package]
name = "vsrs"
description = "Command line utility for generating sample streams for the Volca Sample"
documentation = "https://docs.rs/vsrs"
repository = "https://github.com/glindstedt/vsrs"
license = "LGPL-3.0-or-later"
version = "0.2.2"
authors = ["Gustaf Lindstedt <gustaflindstedt@protonmail.com>"]
edition = "2018"
keywords = ["audio", "cli"]
categories = ["multimedia::audio", "command-line-utilities"]
exclude = [
    ".gitattributes",
    ".github",
    "contrib",
    "*.ron",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
korg-syro = "0.2.1"
log = "0.4"
ron = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
simple_logger = "1.11"
wav = "0.5"
